@@ -10,6 +10,12 @@ import android.widget.Button;
 import android.widget.EditText;
 import android.widget.TextView;
 
+import com.android.volley.RequestQueue;
+import com.android.volley.Response;
+import com.android.volley.toolbox.Volley;
+
+import org.json.JSONObject;
+
 public class LoginActivity extends AppCompatActivity {
 private AlertDialog dialog;
     @Override
@@ -30,8 +36,57 @@ private AlertDialog dialog;
         final Button loginButton = (Button) findViewById(R.id.loginButton);
 
         loginButton.setOnClickListener(new View.OnClickListener(){
-            
+
+            @Override
+            public void onClick(View v) {
+                String userID = idText.getText().toString();
+                String userPassword = passwordText.getText().toString();
+
+                Response.Listener<String> responseLister = new Response.Listener<String>() {
+                    @Override
+                    public void onResponse(String response) {
+                        try{
+
+                            JSONObject jsonResponse = new JSONObject(response);
+                            boolean success = jsonResponse.getBoolean("success");
+                            if(success){
+                                AlertDialog.Builder builder = new AlertDialog.Builder(LoginActivity.this);
+                                dialog = builder.setMessage("Login success full!!")
+                                        .setPositiveButton("OK", null)
+                                        .create();
+                                dialog.show();
+
+                                Intent intent = new Intent(LoginActivity.this, MainActivity.class);
+                                LoginActivity.this.startActivity(intent);
+                                finish();
+                            }else{
+                                AlertDialog.Builder builder = new AlertDialog.Builder(LoginActivity.this);
+                                dialog = builder.setMessage("Login failed!!")
+                                        .setNegativeButton("OK", null)
+                                        .create();
+                                dialog.show();
+                            }
+                        }
+                        catch(Exception e){
+
+                            e.printStackTrace();
+                        }
+                    }
+                };
+
+                LoginRequest loginRequest = new LoginRequest(userID, userPassword, responseLister);
+                RequestQueue queue = Volley.newRequestQueue(LoginActivity.this);
+                queue.add(loginRequest);
+            }
         });
 
+    }
+    @Override
+    protected void onStop(){
+        super.onStop();
+        if(dialog!= null){
+            dialog.dismiss();
+            dialog = null;
+        }
     }
 }
